@@ -176,7 +176,12 @@ EPrints Modules
     <epp:phrase id="lib/searchexpression:results">Displaying results <epc:pin name="from"/> to <epc:pin name="to"/> of <epc:pin name="n"/>.</epp:phrase>
     <epp:phrase id="lib/searchexpression:search_time">Search time: <epc:pin name="searchtime"/>s.</epp:phrase>
     <epp:phrase id="lib/searchexpression:noresults">Search has no matches.</epp:phrase>
-    <epp:phrase id="lib/searchexpression:export_section">Export results as <epc:pin name="menu"/> <epc:pin name="button"/></epp:phrase>
+    <epp:phrase id="lib/searchexpression:export_section">
+<table width="100%"><tr>
+  <td align="left">Export results as <epc:pin name="menu"/><epc:pin name="button"/></td>
+  <td align="right"><epc:pin name="feeds"/></td>
+</tr></table>
+</epp:phrase>
     <epp:phrase id="lib/searchexpression:export_button">Export</epp:phrase>
     <epp:phrase id="lib/searchexpression:next">Next <epc:pin name="n"/></epp:phrase>
     <epp:phrase id="lib/searchexpression:prev">Previous <epc:pin name="n"/></epp:phrase>
