@@ -28,18 +28,25 @@ sub action_export_redir
 {
 	my( $self ) = @_;
 
-	my $exp = $self->{session}->param( "_exp" );
 	my $cacheid = $self->{session}->param( "_cache" );
 	my $format = $self->{session}->param( "_output" );
+
+	$self->{processor}->{redirect} = $self->export_url( $format )."&_cache=".$cacheid;
+}
+
+sub export_url
+{
+	my( $self, $format ) = @_;
+
+	my $exp = $self->{session}->param( "_exp" );
 	my $plugin = $self->{session}->plugin( "Export::".$format );
 
 	my $url = $self->{session}->get_uri();
 	#cjg escape URL'ify urls in this bit... (4 of them?)
 	my $escexp = $exp;
 	$escexp =~ s/ /+/g; # not great way...
-	my $fullurl = "$url/export_".$self->{session}->get_repository->get_id."_".$format.$plugin->param("suffix")."?_exp=$escexp&_output=$format&_action_export=1&_cache=$cacheid&screen=".$self->{processor}->{screenid};
-
-	$self->{processor}->{redirect} = $fullurl;
+	my $fullurl = "$url/export_".$self->{session}->get_repository->get_id."_".$format.$plugin->param("suffix")."?_exp=$escexp&_output=$format&_action_export=1&screen=".$self->{processor}->{screenid};
+	return $fullurl;
 }
 
 sub allow_export { return 0; }
@@ -293,39 +300,61 @@ sub render_export_select
 	my @plugins = $self->_get_export_plugins;
 	my $cacheid = $self->{processor}->{results}->{cache_id};
 	my $escexp = $self->{processor}->{search}->serialise;
+	my $session = $self->{session};
 	if( scalar @plugins == 0 ) 
 	{
-		return $self->{session}->make_doc_fragment;
+		return $session->make_doc_fragment;
 	}
 
-	my $select = $self->{session}->make_element( "select", name=>"_output" );
+	my $feeds = $session->make_doc_fragment;
 	my $options = {};
 	foreach my $plugin_id ( @plugins ) 
 	{
 		$plugin_id =~ m/^[^:]+::(.*)$/;
 		my $id = $1;
-		my $option = $self->{session}->make_element( "option", value=>$id );
-		my $plugin = $self->{session}->plugin( $plugin_id );
+		my $plugin = $session->plugin( $plugin_id );
 		my $dom_name = $plugin->render_name;
-		$option->appendChild( $dom_name );
-		$options->{EPrints::XML::to_string($dom_name)} = $option;
+		if( $plugin->is_feed )
+		{
+			my $span = $session->make_element( "span", class=>"ep_search_feed" );
+			my $url = $self->export_url( $id );
+			my $a1 = $session->render_link( $url );
+			my $icon = $session->make_element( "img", src=>"/style/images/feed-icon-14x14.png", alt=>"[feed]", border=>0 );
+			$a1->appendChild( $icon );
+			my $a2 = $session->render_link( $url );
+			$a2->appendChild( $dom_name );
+			$span->appendChild( $a1 );
+			$span->appendChild( $session->make_text( " " ) );
+			$span->appendChild( $a2 );
+
+			$feeds->appendChild( $session->make_text( " " ) );
+			$feeds->appendChild( $span );
+		}
+		else
+		{
+			my $option = $session->make_element( "option", value=>$id );
+			$option->appendChild( $dom_name );
+			$options->{EPrints::XML::to_string($dom_name)} = $option;
+		}
 	}
+	my $select = $session->make_element( "select", name=>"_output" );
 	foreach my $optname ( sort keys %{$options} )
 	{
 		$select->appendChild( $options->{$optname} );
 	}
-	my $button = $self->{session}->make_doc_fragment;
-	$button->appendChild( $self->{session}->render_button(
-			name=>"_action_export_redir", 
-			value=>$self->{session}->phrase( "lib/searchexpression:export_button" ) ) );
+	my $button = $session->make_doc_fragment;
+	$button->appendChild( $session->render_button(
+			name=>"_action_export_redir",
+			value=>$session->phrase( "lib/searchexpression:export_button" ) ) );
 	$button->appendChild( 
-		$self->{session}->render_hidden_field( "screen", $self->{processor}->{screenid} ) ); 
+		$session->render_hidden_field( "screen", $self->{processor}->{screenid} ) ); 
 	$button->appendChild( 
-		$self->{session}->render_hidden_field( "_cache", $cacheid ) ); 
+		$session->render_hidden_field( "_cache", $cacheid ) ); 
 	$button->appendChild( 
-		$self->{session}->render_hidden_field( "_exp", $escexp, ) );
+		$session->render_hidden_field( "_exp", $escexp, ) );
 
-	return $self->{session}->html_phrase( "lib/searchexpression:export_section",
+	return $session->html_phrase( "lib/searchexpression:export_section",
+					feeds => $feeds,
 					menu => $select,
 					button => $button );
 }
